Fixed viewing for mobile use @media queries fixed, mobile works great z-index set correctly on .welcome-section p 116 updated contact section editing required for social media links

--- a/Certification/Cert-5 Personal Portfolio/styles.css
+++ b/Certification/Cert-5 Personal Portfolio/styles.css
@@ -26,29 +26,8 @@ html {
     font-size: 62.5%;
 }
 
-/* 1200px / 16px = 75em */
-@media (max-width: 75em) {
-    html {
-      font-size: 60%;
-    }
-}
-  
-  /* 980px / 16px = 61.25em */
-  @media (max-width: 61.25em) {
-    html {
-      font-size: 58%;
-    }
-}
-  
-  /* 460px / 16px = 28.75em */
-  @media (max-width: 28.75em) {
-    html {
-      font-size: 55%;
-    }
-}
-
 body {
-    background-color: black;
+    background-color: #0A2046;
     color: white;
 }
 
@@ -61,6 +40,7 @@ nav {
     background-color: #3e187a;
     background-image: linear-gradient(316deg, #3e187a 0%, #994ecc 74%);
     width: 100%;
+    z-index: 2
 }
 
 nav ul {
@@ -84,7 +64,7 @@ nav ul li a {
     text-decoration: none;
     display: block;
     color: white;
-    text-shadow: 2px 2px black;
+    text-shadow: 2px 2px 8px black;
     font-family: 'Be Vietnam Pro', sans-serif;
     padding: 2rem 1rem;
     transition-duration: 0.3s;
@@ -107,6 +87,7 @@ section {
     background-color: #4d4855;
     background-image: linear-gradient(147deg, #4d4855 0%, #000000 74%);
     padding-bottom: 30rem;
+    z-index: 1
     
 }
 
@@ -116,7 +97,7 @@ h1 {
     font-family: 'Be Vietnam Pro', sans-serif;
     padding-bottom: 2rem;
     margin-top: 15rem;
-    text-shadow: 3px 3px black;
+    text-shadow: 3px 3px 5px black;
     width: 90vw;
     text-align: center;
 }
@@ -128,11 +109,11 @@ h1 {
     font-family: 'Noto Sans', sans-serif;
     color: #7a42d3;
     opacity: 95%;
-    text-shadow: 1px 2px black;
+    text-shadow: 2px 2px 8px black;
     width: 65vw;
     text-align: center;
     padding-left: 10rem;
-    
+    z-index: 1
 }
 
 .projects-section {
@@ -142,7 +123,7 @@ h1 {
     background-color: #7f5a83;
     background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
     position: relative;
-    z-index: -1;
+    z-index: -1
 }
 
 .projects-section-header {
@@ -150,6 +131,7 @@ h1 {
     top: 10rem;
     left: 4rem;
     width: 45rem;
+    text-shadow: 3px 3px 5px black;
 }
 
 .project-collections {
@@ -166,7 +148,19 @@ h1 {
 }
 
 .contact-section-header {
+    font-size: 3rem !important;
+    font-family: 'Be Vietnam Pro', sans-serif;
+    text-align: center;
+    text-shadow: 3px 3px 5px black;
+}
+.contact-section-header p {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    text-shadow: 2px 2px 8px black;
+}
 
+.contact-links {
+    text-decoration: none;
 }
 
 footer {
@@ -176,5 +170,54 @@ footer {
     align-items: center;
     text-align: center;
     font-size: 2rem;
-    border-top: 0.5rem solid #994eccff
+    border-top: 0.5rem solid #994eccff;
+    font-family: 'Be Vietnam Pro', sans-serif;
+}
+
+footer p {
+    text-shadow: 2px 2px 2px black;
+}
+
+/* 1200px / 16px = 75em */
+@media (max-width: 75em) {
+    html {
+      font-size: 60%;
+    }
+}
+  
+/* 980px / 16px = 61.25em */
+@media (max-width: 61.25em) {
+    html {
+        font-size: 58%;
+    }
+    nav ul{
+        justify-content: center;
+        align-items: center;
+    }
+    .welcome-section, h1{
+        justify-content: center;
+        align-items: center;
+    }
+    .welcome-section p {
+        padding-left: 0;
+    }
+}
+  
+/* 460px / 16px = 28.75em */
+@media (max-width: 28.75em) {
+    html {
+      font-size: 55%;
+    }
+    nav ul{
+        justify-content: center;
+        align-items: center;
+    }
+    .welcome-section, h1{
+        justify-content: center;
+        align-items: center;
+    }
+    .welcome-section p {
+        margin: 0;
+        padding-left: 0;
+    }
 }
